--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Permisos necesarios para carga de imágenes y red -->
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -17,23 +18,19 @@
         android:theme="@style/Theme.AdvMasterDetail"
         tools:targetApi="31">
 
+        <!-- Pantalla principal: lista de películas -->
         <activity
-            android:name=".categories.CategoryListActivity"
+            android:name=".movies.MoviesListActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".movies.MoviesListActivity"
-            android:exported="false"/>
-
+        <!-- Pantalla de detalle de película -->
         <activity
             android:name=".movie.MovieDetailActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
-
 </manifest>
