--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -41,5 +40,11 @@
         <activity
             android:name=".register.RegisterActivity"
             android:exported="false" />
+
+        <!-- Favoritos -->
+        <activity
+            android:name=".favorites.FavoritesActivity"
+            android:exported="false" />
+
     </application>
 </manifest>
